# tul-psi

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  docker-compose.e2e.yaml  docker-compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  alembic.ini  examples_demo_requests.py  main.py  migration_settings.py  observability.py  pyproject.toml  rate_limit.py  requirements.txt  seed.py  seed.sql  seed_dev.sql  seed_production.sql  settings.py  start.ps1  start.sh  validators.py
backend/api/: announcements.py  auth.py  courses.py  deps.py  health.py  projects.py  users.py
backend/clients/: fake_http_client.py
backend/db/: announcements.py  auth.py  courses.py  fake_db.py  projects.py  session.py  token_provider.py  users.py
backend/migrations/: README.md  env.py
backend/models/: __init__.py  announcement.py  course.py  course_evaluation.py  course_lecturer.py  otp_token.py  peer_feedback.py  project.py  project_evaluation.py  project_member.py  user.py
backend/monitoring/: docker-compose.yml
backend/observability/: meter_provider.py  metrics.py  tracing.py
backend/schemas/: __init__.py  announcements.py  courses.py  projects.py  users.py
backend/services/: announcements.py  auth.py  auth_service.py  courses.py  email.py  projects.py  projects_service.py  users.py
backend/student_projects_catalogue_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/tests/: conftest.py  test_auth_deps.py  test_auth_otp_request.py  test_auth_otp_verify.py  test_health.py  test_main.py  test_models.py  test_projects.py  (+2 more)
(+249 files in other folders)
