[project]
name = "student-projects-catalogue-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W: pycodestyle errors/warnings, F: Pyflakes, I: isort, UP: pyupgrade,
# B: flake8-bugbear, S: flake8-bandit (security), ANN: type annotations
select = ["E", "W", "F", "I", "UP", "B", "S", "ANN"]
ignore = [
  # B008: FastAPI's Depends() is intentionally used in function argument defaults.
  "B008",
]

[tool.ruff.lint.per-file-ignores]
# Test files: relax S101 (assert used) and all annotation rules (ANN*) to keep tests lightweight
"tests/**/*.py" = ["S101", "ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
